Improvement https://github.com/tomaytotomato/location4j/issues/50
location4j.bin is now added to the location4j/target/generated-resources folder